--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Sen', sans-serif;
+  font-family: 'Sen', sans-serif !important;
 }
 
 a {
