--- a/styles/pageStyles/homepage.css
+++ b/styles/pageStyles/homepage.css
@@ -97,3 +97,16 @@
     width: 100vw;
     z-index: 2;
   }
+
+/* responsive styling */
+  @media screen and (max-width: 375px) {
+    
+    /* medium phone size */
+      .phoneSizeCont {
+        max-width: 375px;
+      }
+
+      .swiper-wrapper {
+        padding-left: 1.25rem;
+      }
+  }
