--- a/styles/pageStyles.css
+++ b/styles/pageStyles.css
@@ -1,3 +1,5 @@
+/* BASE PAGE LAYOUT ======================================= */
+
 /* entire window container */
   .windowCont {
     display: flex;
@@ -13,6 +15,7 @@
     flex-direction: column;
     align-items: center;
 
+    min-width: 428px;
     max-width: 428px;
   }
 
@@ -25,6 +28,21 @@
     width: 100%;
     min-height: 50px;
   }
+
+/* nav bar container */
+  .navBarCont {
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    
+    width: 100vw;
+    z-index: 2;
+  }
+
+/* BASE PAGE LAYOUT END ===================================== */
+
+
+/* HOMEPAGE (index.js) ====================================== */
 
 /* search bar container */
   .searchBarCont {
@@ -87,15 +105,7 @@
     min-height: 68px
   }
 
-/* nav bar container */
-  .navBarCont {
-    display: flex;
-    position: fixed;
-    justify-content: center;
-    
-    width: 100vw;
-    z-index: 2;
-  }
+
 
 /* responsive styling */
   @media screen and (max-width: 375px) {
@@ -109,3 +119,64 @@
         padding-left: 1.25rem;
       }
   }
+
+/* HOMEPAGE (index.js) END =================================== */
+
+/* DETAIL (detail.js) ======================================== */
+
+.detail-headerCont {
+  display: flex;
+  justify-content: space-between;
+
+  width: 100%;
+  height: 50px;
+}
+
+.detail-backBtnCont {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: flex-end;
+
+  padding-bottom: 4px;
+  padding-left: 20px;
+}
+
+.detail-title {
+  margin-left: -20px;
+}
+
+.detail-mainCont {
+  display: flex;
+
+  flex-grow: 1;
+  max-width: 382px;
+  max-height: 405px;
+
+  margin-top: 25px;
+}
+
+.detail-moviePhoto {
+  max-width: 279px;
+  max-height: 405px;
+}
+
+.detail-squaresCont {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  flex-grow: 1;
+  min-width: 103px;
+  max-width: 103px;
+}
+
+.detail-descCont {
+  display: flex;
+  flex-grow: 1;
+  width: 377px;
+  max-width: 377px;
+  max-height: 181px;
+
+  margin-top: 50px;
+}
