--- a/styles/pageStyles.css
+++ b/styles/pageStyles.css
@@ -107,76 +107,104 @@
 
 
 
-/* responsive styling */
+
+
+/* HOMEPAGE (index.js) END =================================== */
+
+/* DETAIL (detail.js) ======================================== */
+
+  .detail-headerCont {
+    display: flex;
+    justify-content: space-between;
+
+    width: 100%;
+    height: 50px;
+  }
+
+  .detail-backBtnCont {
+    display: flex;
+    /* flex-direction: column; */
+    align-items: flex-end;
+
+    padding-bottom: 4px;
+    padding-left: 20px;
+  }
+
+  .detail-title {
+    margin-left: -20px;
+  }
+
+  .detail-mainCont {
+    display: flex;
+    /* justify-content: center; */
+    align-content: center;
+
+    flex-grow: 1;
+    max-width: 382px;
+    max-height: 405px;
+
+    margin-top: 25px;
+  }
+
+  .detail-moviePhoto {
+    max-width: 279px;
+    max-height: 405px;
+  }
+
+  .detail-squaresCont {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    flex-grow: 1;
+    min-width: 103px;
+    max-width: 103px;
+  }
+
+  .detail-descCont {
+    display: flex;
+    flex-grow: 1;
+    width: 377px;
+    max-width: 377px;
+    max-height: 181px;
+
+    margin-top: 50px;
+    margin-bottom: 85px;
+  }
+
+/* DETAIL (detail.js) END ==================================== */
+
+/* RESPONSIVE STYLING ======================================== */
   @media screen and (max-width: 375px) {
     
     /* medium phone size */
       .phoneSizeCont {
+        min-width: 375px;
         max-width: 375px;
       }
 
       .swiper-wrapper {
         padding-left: 1.25rem;
       }
+
+      .detail-mainCont {
+        max-width: 355px;
+      }
+
+      .detail-backBtnCont {
+        padding-left: 10px;
+      }
+
+      .detail-title {
+        margin-left: -20px;
+      }
+
+      .detail-moviePhoto {
+        max-width: 255px;
+      }
+
+      .detail-descCont {
+        max-width: 350px;
+      }
   }
-
-/* HOMEPAGE (index.js) END =================================== */
-
-/* DETAIL (detail.js) ======================================== */
-
-.detail-headerCont {
-  display: flex;
-  justify-content: space-between;
-
-  width: 100%;
-  height: 50px;
-}
-
-.detail-backBtnCont {
-  display: flex;
-  /* flex-direction: column; */
-  align-items: flex-end;
-
-  padding-bottom: 4px;
-  padding-left: 20px;
-}
-
-.detail-title {
-  margin-left: -20px;
-}
-
-.detail-mainCont {
-  display: flex;
-
-  flex-grow: 1;
-  max-width: 382px;
-  max-height: 405px;
-
-  margin-top: 25px;
-}
-
-.detail-moviePhoto {
-  max-width: 279px;
-  max-height: 405px;
-}
-
-.detail-squaresCont {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-
-  flex-grow: 1;
-  min-width: 103px;
-  max-width: 103px;
-}
-
-.detail-descCont {
-  display: flex;
-  flex-grow: 1;
-  width: 377px;
-  max-width: 377px;
-  max-height: 181px;
-
-  margin-top: 50px;
-}
