--- a/styles/pageStyles/detail.module.scss
+++ b/styles/pageStyles/detail.module.scss
@@ -56,7 +56,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items:flex-end;
   
     flex-grow: 1;
     min-width: 103px;
