--- a/styles/pageStyles/home.module.scss
+++ b/styles/pageStyles/home.module.scss
@@ -63,6 +63,14 @@
       min-height: 212px;
     }
 
+    .carouselContGenre {
+      display: flex;
+      justify-content: center;
+      width: 95%;
+      min-height: 212px;
+      margin-bottom: 68px;
+    }
+
     /* sub headings conts */
     .subHeadingCont {
       display: flex;
