drop zone testing

--- a/comps/Description/description.module.scss
+++ b/comps/Description/description.module.scss
@@ -50,4 +50,11 @@
     height: 94px;
     width: auto;
   }
+
+  .commentCont{
+    display: flex;
+    flex-direction: column;
+    height: 94px;
+    width: auto;
+  }
 }
