--- a/styles/pageStyles/detail.module.scss
+++ b/styles/pageStyles/detail.module.scss
@@ -22,7 +22,8 @@
         align-items: flex-end;
       
         padding-bottom: 4px;
-        padding-left: 20px;
+        padding-left: 6px;
+        padding-right: 15px;
       }
     
       /* cinemagic title container */
@@ -59,8 +60,8 @@
     align-items:flex-end;
   
     flex-grow: 1;
-    min-width: 103px;
-    max-width: 103px;
+    min-width: 111px;
+    max-width: 111px;
   }
 }
 
